Bug fixes on mobile view.

--- a/style/main.css
+++ b/style/main.css
@@ -558,13 +558,13 @@ hr {
     margin-bottom: 10px; }
 
   .game-intro {
-    width: 55%;
+    width: 60%;
     display: block;
     box-sizing: border-box;
     line-height: 1.65; }
 
   .restart-button {
-    width: 42%;
+    width: 30%;
     padding: 0;
     display: block;
     box-sizing: border-box;
@@ -747,7 +747,7 @@ hr {
     transform: translate(202px, 202px); }
 
   .tile .tile-inner {
-    font-size: 35px; }
+    font-size: 0px; }
 
   .game-message p {
     font-size: 30px !important;
